# realestate_hotmap

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
models/: coords.py  itemdb.py  items.py  models.py  requestedcoords.py  scrapper.py  storage.py  storageitems.py  viewdata.py
tests/: test_requested_coords.py  test_storage.py
