[project]
name = "py-realstate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "fastapi[standard]>=0.115.14",
    "folium>=0.20.0",
]

[tool.ruff]
lint.extend-select = ["ANN"]
exclude = ["tests/"]
[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
     "ruff>=0.12.7",
]
